<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mine Sweeper</string>
    <string name="action_settings">Settings</string>
    <string name="action_mainMenu">Main Menu</string>
    <string name="action_chooseLevel">Choose Level</string>
    <string name="action_playAgain">Play Again</string>
    <string name="hello_world">Hello world!</string>
	<string name="playGame">Play Game</string>
    <string name="easy">Beginner</string>
    <string name="med">Intermediate</string>
    <string name="hard">Expert</string>
    <string name="display"></string>
    <string name="flag">Flag</string>
    <string name="disarm">Disarm</string>
    <string name="timer">Timer</string>
    <string name="time">Time</string>
    <string name="flags_left">Flags Left</string>
    <string name="settings">Settings</string>
    <string name="clearHighscores">Clear Highscores</string>
    <string name="titleIcon">Title Icon</string>
    <string name="selectLevel">Select Level</string>
    <string name="createdBy">Created by Ryan Iverson and Jeffrey Forster</string>
    <string name="credits">Credits:</string>
    <string name="jeff">Jeffrey Forster</string>
    <string name="ryan">Ryan Iverson</string>
    <string name="highscores">Highscores</string>
    
    
</resources>