<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
   	<item
        android:id="@+id/action_main_menu"
        android:onClick="onOptionMainMenu"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_mainMenu"/>
    
    <item
        android:id="@+id/action_settings"
        android:onClick="onOptionSettings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_choose_level"
        android:onClick="onOptionChooseLevel"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_chooseLevel"/>
    
    <item
        android:id="@+id/action_play_again"
        android:onClick="onOptionPlayAgain"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_playAgain"/>
    
    
</menu> 