<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:background="#6E6E6E" >
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#6E6E6E"
	    android:orientation="vertical" >
	    
	    <ImageView
	        android:id="@+id/highscores"
	        android:contentDescription="@string/highscores"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
	        android:src="@drawable/highscores"
	        android:gravity="center" >
	
	           
	    </ImageView>
	    
	    <EditText
	        android:id="@+id/beginner"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_below="@+id/highscores"
	         android:layout_marginTop="5dp"
	         android:clickable="false"
	         android:cursorVisible="false"
	         android:focusable="false"
	         android:focusableInTouchMode="false"
	         android:gravity="center"
	         android:text="@string/easy"
	         android:inputType="none"
	         android:background="#00000000"
	         android:textSize="25sp" >
	            
	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/beginnerSetup"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_below="@+id/beginner"
	         android:layout_marginTop="5dp"
	         android:clickable="false"
	         android:cursorVisible="false"
	         android:focusable="false"
	         android:focusableInTouchMode="false"
	         android:gravity="center"
	         android:inputType="none"
	         android:background="#00000000"
	         android:textSize="20sp" >
	            
	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/beginnerScores"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_below="@+id/beginnerSetup"
	         android:layout_marginTop="5dp"
	         android:clickable="false"
	         android:cursorVisible="false"
	         android:focusable="false"
	         android:focusableInTouchMode="false"
	         android:gravity="center"
	         android:inputType="none"
	         android:background="#00000000"
	         android:textSize="20sp" >
	            
	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/intermediate"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_below="@+id/beginnerScores"
	         android:layout_marginTop="5dp"
	         android:clickable="false"
	         android:cursorVisible="false"
	         android:focusable="false"
	         android:focusableInTouchMode="false"
	         android:gravity="center"
	         android:text="@string/med"
	         android:inputType="none"
	         android:background="#00000000"
	         android:textSize="25sp" >
	            
	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/intermediateSetup"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_below="@+id/intermediate"
	         android:layout_marginTop="5dp"
	         android:clickable="false"
	         android:cursorVisible="false"
	         android:focusable="false"
	         android:focusableInTouchMode="false"
	         android:gravity="center"
	         android:inputType="none"
	         android:background="#00000000"
	         android:textSize="20sp" >
	            
	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/intermediateScores"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_below="@+id/intermediateSetup"
	         android:layout_marginTop="5dp"
	         android:clickable="false"
	         android:cursorVisible="false"
	         android:focusable="false"
	         android:focusableInTouchMode="false"
	         android:gravity="center"
	         android:inputType="none"
	         android:background="#00000000"
	         android:textSize="20sp" >
	            
	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/expert"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_below="@+id/intermediateScores"
	         android:layout_marginTop="5dp"
	         android:clickable="false"
	         android:cursorVisible="false"
	         android:focusable="false"
	         android:focusableInTouchMode="false"
	         android:gravity="center"
	         android:text="@string/hard"
	         android:inputType="none"
	         android:background="#00000000"
	         android:textSize="25sp" >
	            
	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/expertSetup"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_below="@+id/expert"
	         android:layout_marginTop="5dp"
	         android:clickable="false"
	         android:cursorVisible="false"
	         android:focusable="false"
	         android:focusableInTouchMode="false"
	         android:gravity="center"
	         android:inputType="none"
	         android:background="#00000000"
	         android:textSize="20sp" >
	            
	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/expertScores"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_below="@+id/expertSetup"
	         android:layout_marginTop="5dp"
	         android:clickable="false"
	         android:cursorVisible="false"
	         android:focusable="false"
	         android:focusableInTouchMode="false"
	         android:gravity="center"
	         android:inputType="none"
	         android:background="#00000000"
	         android:textSize="20sp" >
	            
	        <requestFocus />
	    </EditText>
	
	</RelativeLayout>	
</ScrollView>