<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6E6E6E"
    android:orientation="vertical" >
    
    
    <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top|center" >
        
         <ImageView
        	android:contentDescription="@string/titleIcon"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="5dp"
        	android:src="@drawable/title" />
        
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="bottom|right"
            android:inputType="none"
            android:background="#00000000"
            android:textSize="12sp" >
            
            <requestFocus />
        </EditText>
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="bottom|center"
            android:inputType="none"
            android:text="@string/flags_left"
            android:background="#00000000"
            android:textSize="12sp" >
            
            <requestFocus />
        </EditText>
        
        <EditText
            android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_weight="3" 
            android:gravity="bottom|center"
            android:textSize="12sp"
        	android:text="@string/time"
        	android:background="#00000000"
        	android:clickable="false" 
        	android:cursorVisible="false" 
        	android:focusable="false" 
        	android:focusableInTouchMode="false"
            android:inputType="none" >
            
            <requestFocus />
        </EditText>
        
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" >

            <RadioButton
                android:id="@+id/disarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="handleRadioButton"
                android:text="@string/disarm" />

            <RadioButton
                android:id="@+id/flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleRadioButton"
                android:text="@string/flag" />
       </RadioGroup>
  
       <EditText
            android:id="@+id/minesLeftDisplay"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:gravity="top|center"
            android:layout_weight="4"
            android:textSize="40sp"
            android:background="#00000000"
            android:clickable="false" 
        	android:cursorVisible="false" 
        	android:focusable="false" 
        	android:focusableInTouchMode="false"
            android:inputType="none" >

            <requestFocus />
        </EditText>

        <Chronometer
            android:id="@+id/chronometer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="top|center"
            android:text="@string/timer"
            android:textSize="40sp" />
    </TableRow>
    
    <TableRow
   	    android:layout_width="wrap_content"
   	    android:layout_height="0dp"
   	    android:layout_weight="1" >
        
        <Button
   	        android:id="@+id/button0"
   	        android:layout_width="match_parent"
   	        android:layout_height="match_parent"
   	        android:layout_weight="1"    	        
   	        android:onClick="handleButtonNode"
    	    android:text="" />

    	<Button
            android:id="@+id/button1"
   	        android:layout_width="match_parent"
   	        android:layout_height="match_parent"
   	        android:layout_weight="1"
   	        android:onClick="handleButtonNode"
   	        android:text="" />

        <Button
   	        android:id="@+id/button2"
   	        android:layout_width="match_parent"
   	        android:layout_height="match_parent"
   	        android:layout_weight="1"
   	        android:onClick="handleButtonNode"
   	        android:text="" />

   	    <Button
   	        android:id="@+id/button3"
   	        android:layout_width="match_parent"
   	        android:layout_height="match_parent"
   	        android:layout_weight="1"
   	        android:onClick="handleButtonNode"
   	        android:text="" />

   	    <Button
   	        android:id="@+id/button4"
   	        android:layout_width="match_parent"
   	        android:layout_height="match_parent"
   	        android:layout_weight="1"
   	        android:onClick="handleButtonNode"
   	        android:text="" />

   	    <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="handleButtonNode"
            android:text="" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="handleButtonNode"
            android:text="" />
    </TableRow>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:layout_weight="1" >

	    <Button
	        android:id="@+id/button7"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button8"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button9"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button10"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button11"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button12"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button13"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />
	</TableRow>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:layout_weight="1" >

	    <Button
	        android:id="@+id/button14"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button15"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button16"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button17"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button18"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button19"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button20"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />
	</TableRow>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:layout_weight="1" >

	    <Button
	        android:id="@+id/button21"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button22"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button23"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button24"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button25"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button26"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button27"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />
	</TableRow>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:layout_weight="1" >

	    <Button
	        android:id="@+id/button28"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button29"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button30"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button31"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button32"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button33"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button34"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />
	</TableRow>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:layout_weight="1" >

	    <Button
	        android:id="@+id/button35"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button36"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button37"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button38"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button39"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button40"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button41"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />
	</TableRow>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:layout_weight="1" >

	    <Button
	        android:id="@+id/button42"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button43"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button44"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button45"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button46"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button47"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />

	    <Button
	        android:id="@+id/button48"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="handleButtonNode"
	        android:text="" />
	</TableRow>
    
</LinearLayout>